Fix code block style when creating a new message
The styling for code blocks was not visible inside the trix-editor,
we need to set the style ourselves. I have adapted what I found here:

https://dev.to/fanreza/resolving-problem-when-using-trix-rich-editor-with-tailwind-13ca

--- a/app/assets/stylesheets/actiontext.scss
+++ b/app/assets/stylesheets/actiontext.scss
@@ -47,4 +47,16 @@ trix-editor {
     margin-left: 0.3em;
     padding-left: 0.6em;
   }
+
+  pre {
+    display: inline-block;
+    width: 100%;
+    vertical-align: top;
+    font-family: monospace;
+    font-size: 1em;
+    padding: 0.5em;
+    white-space: pre;
+    background-color: #eee;
+    overflow-x: auto;
+  }
 }
